Create all files
v1.0.0.0 release

--- a/SymLink Tools/MainWindow.xaml
+++ b/SymLink Tools/MainWindow.xaml
@@ -1,12 +1,96 @@
-﻿<Window x:Class="SymLink_Tools.MainWindow"
+﻿<Window xmlns:Controls="clr-namespace:SymLink_Tools.Controls"  x:Class="SymLink_Tools.MainWindow" Name="WindowRoot"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SymLink_Tools"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="SymLink Tools" 
+        Width="500" Height="300"
+        WindowStartupLocation="CenterScreen" 
+        Loaded="WindowRoot_Loaded" Closed="WindowRoot_Closed">
+    <Grid DataContext="{Binding ElementName=WindowRoot}">
+        <Menu VerticalAlignment="Top" Background="White">
+            <MenuItem Header="Menu">
+                <MenuItem Header="Exit" Click="Close"/>
+            </MenuItem>
+        </Menu>
+
+        <TabControl Margin="0,18">
+            <TabItem Header="Main">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition Height="50"/>
+                    </Grid.RowDefinitions>
+                    <Grid>
+                        <Grid.Resources>
+                            <Style TargetType="GroupBox">
+                                <Setter Property="Padding" Value="1"/>
+                            </Style>
+                            <Style TargetType="Button">
+                                <Setter Property="Margin" Value="5,0,0,0"/>
+                            </Style>
+                        </Grid.Resources>
+
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel Margin="5,0">
+                            <GroupBox Header="Real Folder Location">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition/>
+                                        <ColumnDefinition Width="50"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBox Text="{Binding RealFolderPath, Mode=TwoWay}"/>
+                                    <Button Grid.Column="1" Content="Find" Click="FindReal"/>
+                                </Grid>
+                            </GroupBox>
+                            <GroupBox Header="SymLink Folder Location">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition/>
+                                        <ColumnDefinition Width="50"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBox Text="{Binding SymLinkFolderPath, Mode=TwoWay}"/>
+                                    <Button Grid.Column="1" Content="Find" Click="FindSym"/>
+                                </Grid>
+                            </GroupBox>
+                        </StackPanel>
+
+                        <GroupBox Grid.Column="1" Header="Type" VerticalAlignment="Top">
+                            <StackPanel Margin="5">
+                                <RadioButton Content="Root folders" GroupName="symType" IsChecked="True" x:Name="RootFoldersRadio"/>
+                                <RadioButton Content="Subfolders" GroupName="symType" x:Name="SubfoldersRadio"/>
+                            </StackPanel>
+                        </GroupBox>
+                    </Grid>
+                    
+                    <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
+                        <StackPanel.Resources>
+                            <Style TargetType="Button">
+                                <Setter Property="Height" Value="24"/>
+                                <Setter Property="Padding" Value="5,0"/>
+                                <Setter Property="Margin" Value="2.5,0"/>
+                            </Style>
+                        </StackPanel.Resources>
+
+                        <Button Content="Open Real Folder" Click="OpenRealFolder"/>
+                        <Button Content="Create SymLinks" Click="CreateSymlinks"/>
+                        <Button Content="Show link folders" Click="PrintFolders"/>
+                    </StackPanel>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Console" x:Name="ConsoleTab">
+                <Controls:Console x:Name="Console"/>
+            </TabItem>
+        </TabControl>
         
+        <Controls:Status x:Name="Status" VerticalAlignment="Bottom"/>
     </Grid>
 </Window>
