--- a/SymLink Tools/MainWindow.xaml
+++ b/SymLink Tools/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="SymLink Tools" 
         Width="500" Height="300"
         WindowStartupLocation="CenterScreen" 
-        Loaded="WindowRoot_Loaded" Closed="WindowRoot_Closed">
+        Loaded="WindowRoot_Loaded">
     <Grid DataContext="{Binding ElementName=WindowRoot}">
         <Menu VerticalAlignment="Top" Background="White">
             <MenuItem Header="Menu">
@@ -30,6 +30,9 @@
                             </Style>
                             <Style TargetType="Button">
                                 <Setter Property="Margin" Value="5,0,0,0"/>
+                            </Style>
+                            <Style TargetType="TextBox">
+                                <Setter Property="VerticalContentAlignment" Value="Center"/>
                             </Style>
                         </Grid.Resources>
 
@@ -77,6 +80,7 @@
                                 <Setter Property="Height" Value="24"/>
                                 <Setter Property="Padding" Value="5,0"/>
                                 <Setter Property="Margin" Value="2.5,0"/>
+                                <Setter Property="Width" Value="105"/>
                             </Style>
                         </StackPanel.Resources>
 
