--- a/SymLink Tools/App.xaml
+++ b/SymLink Tools/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SymLink_Tools"
              ShutdownMode="OnMainWindowClose"
-             StartupUri="MainWindow.xaml">
+             Startup="Application_Startup">
     <Application.Resources>
          
     </Application.Resources>
